--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     <!-- Cabeçalho Fixo -->
     <header class="fixed top-0 left-0 right-0 z-50 glass-effect">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-xl font-mono font-bold text-white hover:text-cyan-400 transition-colors">Rafael_Alves.dev</a>
+            <img src="https://scontent.fmgf9-1.fna.fbcdn.net/v/t39.30808-1/504379821_1447880959699142_444879475246654087_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=111&ccb=1-7&_nc_sid=e99d92&_nc_ohc=NPSCxtdOJzEQ7kNvwFOfCDW&_nc_oc=AdkutPvkTglDnAphYwcn0nFfJ9EPiXx_TLTQi_7tRP0EgaA9NMOsQYXyMQSu5gGb8EA&_nc_zt=24&_nc_ht=scontent.fmgf9-1.fna&_nc_gid=NcpvbYivT3P4WrpPDakN_A&oh=00_AfPqaykIFQy3pQXYNqb3b9zDz4x0QJpxOEPHEVFZOkN0jw&oe=6868F686" 
+            style= "width: 50px; height: auto:"" ;>
+            <a href="#" style="margin-left: 270px;" class="text-xl font-mono font-bold text-white hover:text-cyan-400 transition-colors">Rafael_Alves.dev</a>
             <nav class="hidden md:flex items-center space-x-6">
                 <a href="#habilidades" class="hover:text-cyan-400 transition-colors">Habilidades</a>
                 <a href="#portfolio" class="hover:text-cyan-400 transition-colors">Portfólio</a>
@@ -95,7 +97,7 @@
         <section id="hero" class="min-h-screen flex flex-col justify-center items-center text-center -mt-20">
             <div class="max-w-3xl">
                 <p class="text-cyan-400 font-mono mb-4 text-lg">Olá, meu nome é</p>
-                <h1 class="text-5xl md:text-7xl font-bold text-white mb-4">Rafael Alves da Silva.</h1>
+                <h1 class="text-5xl md:text-7xl font-bold text-white mb-4">Rafael Alves</h1>
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-400 mb-6">
                     <span id="typing-text"></span><span class="typing-cursor"></span>
                 </h2>
@@ -148,7 +150,7 @@
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                  <div class="glass-effect rounded-lg overflow-hidden group">
-                    <img src="https://lh4.googleusercontent.com/ZyUqxsNKOv_TXD1shtaz_dBpNyd8EU7PCKwVjuwbGVnVt0muCggGOm1-HRnpa01SzXreFAurTwDd5lSjxQec0wvSv-eN410r8nLJN5_xrFQA8mEhZijb8R6OtSOSzFC4Ie1omL1ing=w1280" 
+                    <img src="https://scontent.fmgf9-1.fna.fbcdn.net/v/t39.30808-6/513853813_1447887769698461_3343988558833169854_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=8C7MR6BSuCQQ7kNvwFybVLs&_nc_oc=AdkXJ1AbSSusmUikXNXoJv1fnqE1eICWZiXEZ_vMOkbxCMWey5BgcSw3FaLhUd_VNMU&_nc_zt=23&_nc_ht=scontent.fmgf9-1.fna&_nc_gid=xIwNmQwNZg3qIj2144Hfbw&oh=00_AfOiYaxujZkQqcEML_TLR-ArqNqzs6gbtLVl7jSmFKEcKw&oe=6868F0CB" 
                     alt="Placeholder do Projeto 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-white mb-2">Casa Connect</h3>
